@@ -3,6 +3,8 @@
 	.arch_extension crypto
 
 	.arm
+	vmull.p64	q0, d0, d0
+	vmull.p64	q15, d31, d31
 	aese.8	q0, q0
 	aese.8	q7, q7
 	aese.8	q8, q8
@@ -21,6 +23,8 @@
 	aesimc.8	q15, q15
 
 	.thumb
+	vmull.p64	q0, d0, d0
+	vmull.p64	q15, d31, d31
 	aese.8	q0, q0
 	aese.8	q7, q7
 	aese.8	q8, q8
