@@ -1,5 +1,9 @@
 2012-08-24  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>
 
+	* arm-dis.c (neon_opcodes): Handle VMULL.P64.
+
+2012-08-24  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>
+
 	* arm-dis.c (neon_opcodes): Add support for AES instructions.
 
 2012-08-24  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>
